[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/pipe.png" type="Texture" id=1]
[ext_resource path="res://objects/Pipes.gd" type="Script" id=2]
[ext_resource path="res://sounds/score.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 45, 400 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 100 )

[node name="Pipes" type="Node2D"]
script = ExtResource( 2 )

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sound"

[node name="TopPipe" type="StaticBody2D" parent="." groups=["environment"]]
position = Vector2( 0, -500 )
collision_layer = 2
collision_mask = 0

[node name="Sprite" type="Sprite" parent="TopPipe"]
scale = Vector2( -1, -1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="BottomPipe" type="StaticBody2D" parent="." groups=["environment"]]
position = Vector2( 0, 500 )
collision_layer = 2
collision_mask = 0

[node name="Sprite" type="Sprite" parent="BottomPipe"]
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="ScoreArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="ScoreArea" to="." method="_on_ScoreArea_body_entered"]
